# C-Example-Code

.kdev4/: C++ Class.kdev4
C++ New Cool Features/Auto/: CMakeLists.txt  main.cpp
C++ New Cool Features/DecltypeTypeIDAndMangling/: CMakeLists.txt
C++ New Cool Features/EnhancedForLoop/: CMakeLists.txt  EnhancedForLoop.kdev4
C++ New Cool Features/InitializationIn98/: CMakeLists.txt  InitializationIn98.kdev4  main.cpp
C++ New Cool Features/NestedTemplateClasses/: CMakeLists.txt  main.cpp
C++11 New Cool Features/Auto/: Auto.kdev4
C++11 New Cool Features/Bind/: Bind.kdev4  CMakeLists.txt  main.cpp
C++11 New Cool Features/DecltypeTypeIDAndMangling/: DecltypeTypeIDAndMangling.kdev4  main.cpp
C++11 New Cool Features/DelegatingConstructors/: CMakeLists.txt  DelegatingConstructors.kdev4  main.cpp
C++11 New Cool Features/DynamicCast/: CMakeLists.txt  DynamicCast.kdev4  main.cpp
C++11 New Cool Features/ElisionAndOptimization/: CMakeLists.txt  ElisionAndOptimization.kdev4  main.cpp
C++11 New Cool Features/EnhancedForLoop/: main.cpp
C++11 New Cool Features/FunctionalTypes/: CMakeLists.txt  FunctionalTypes.kdev4  main.cpp
C++11 New Cool Features/InitializationIn11/: CMakeLists.txt  InitializationIn11.kdev4  main.cpp
C++11 New Cool Features/InitializationIn98/: main.cpp
Exceptions/: CMakeLists.txt  Exceptions.kdev4
Exceptions/.kdev4/: Exceptions.kdev4
Exceptions/src/: BasicExceptions.cpp
MultipleInheritence/: .main.cpp.kate-swp  CMakeLists.txt  MultipleInheritence.kdev4  main.cpp
TemplateClasses/: CMakeLists.txt  TemplateClasses.kdev4  main.cpp
(+139 files in other folders)
